# LAMP_IRIS_operational_physiology

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: repository-metadata.yml
configs/: eval_awareness_sandbagging.yaml  iris_antarctic.yaml
data_manifest/: DATASETS.md
docs/: ai_safety_experiments.md  audit_components.md  criticalcare_battery.md  failure_modes.md  public_llm_dataset_selection.md  reproducibility.md
examples/alignment_deception/: cot_reasoning_leakage_config.yaml  deception_experiment_report.md  deception_monitor_summary.csv  deceptive_leakage_config.yaml  input.csv  lstm_early_warning_config.yaml  lstm_hidden_probe_config.yaml  mlp_latent_probe_config.yaml  sandbagging_hidden_leakage_config.yaml  sandbagging_surface_config.yaml  transformer_early_warning_config.yaml  transformer_hidden_probe_config.yaml  (+1 more)
manuscript/: methods_and_claims.md
notebooks/: anthropic_sycophancy_lamp_audit.ipynb  cinc2019_lamp_neural_audit.ipynb  eval_awareness_lamp_audit.ipynb  llm_safety_lamp_audit.ipynb  synthetic_deception_demo.ipynb  synthetic_deception_demo.md
paper/: manuscript.md
scripts/: build_cinc2019_lamp_neural_notebook.py  download_bidsleep.ps1  download_clinical_trajectory_flow_icu.ps1  download_open_physionet_benchmarks.ps1  download_physionet_credentialed.ps1  run_anthropic_sycophancy_lamp_bench.py  run_bidsleep_lamp_bench.py  run_eval_awareness_lamp_bench.py  run_lamp_criticalcare_battery.py  run_lamp_external_panel.ps1  run_llm_safety_lamp_bench.py  run_mimic_iv_onset_bench.py  run_physionet_sequence_lamp_bench.py  run_sepsis_ml_lamp_bench.py  run_sepsis_perturbation_bench.py  run_synthetic_deception_experiment.py
tests/: test_eval_awareness_framing.py  test_inspect_import.py  test_matching.py  test_negative_controls.py  test_physionet2019_pipeline.py  test_sentinels.py
(+586 files in other folders)
